kotlisp/antlr/KotlispParser.py
# Generated from antlr/Kotlisp.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys

if sys.version_info[1] > 5:
    from typing import TextIO
else:
    from typing.io import TextIO




class KotlispParser(Parser):
    grammarFileName = "Kotlisp.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [DFA(ds, i) for i, ds in enumerate(atn.decisionToState)]

    sharedContextCache = PredictionContextCache()

    literalNames = [
        "<INVALID>",
        "'fun'",
        "'list'",
        "'setq'",
        "'dotimes'",
        "'if'",
        "'['",
        "']'",
        "'print'",
        "'read-line'",
        "'int'",
        "'str'",
        "'bool'",
        "'+'",
        "'-'",
        "'*'",
        "'/'",
        "'^'",
        "'&'",
        "'%'",
        "'|'",
        "'='",
        "'!='",
        "'>'",
        "'>='",
        "'<'",
        "'<='",
        "'('",
        "')'",
    ]

    symbolicNames = [
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "PLUS",
        "MINUS",
        "MULT",
        "DIV",
        "XOR",
        "AND",
        "MOD",
        "OR",
        "EQUALS",
        "NOT_EQUALS",
        "GREATER",
        "GREATER_OR_EQUALS",
        "LESS",
        "LESS_OR_EQUALS",
        "OP",
        "CP",
        "NUMBER",
        "BOOLEAN",
        "STRING",
        "NAME",
        "WHITESPACE",
        "COMMENT",
    ]

    RULE_kotlisp = 0
    RULE_fun = 1
    RULE_s_expression = 2
    RULE_math_expression = 3
    RULE_list_ = 4
    RULE_fun_call = 5
    RULE_variable = 6
    RULE_loop = 7
    RULE_conditional = 8
    RULE_index = 9
    RULE_print_ = 10
    RULE_read_line = 11

    ruleNames = [
        "kotlisp",
        "fun",
        "s_expression",
        "math_expression",
        "list_",
        "fun_call",
        "variable",
        "loop",
        "conditional",
        "index",
        "print_",
        "read_line",
    ]

    EOF = Token.EOF
    T__0 = 1
    T__1 = 2
    T__2 = 3
    T__3 = 4
    T__4 = 5
    T__5 = 6
    T__6 = 7
    T__7 = 8
    T__8 = 9
    T__9 = 10
    T__10 = 11
    T__11 = 12
    PLUS = 13
    MINUS = 14
    MULT = 15
    DIV = 16
    XOR = 17
    AND = 18
    MOD = 19
    OR = 20
    EQUALS = 21
    NOT_EQUALS = 22
    GREATER = 23
    GREATER_OR_EQUALS = 24
    LESS = 25
    LESS_OR_EQUALS = 26
    OP = 27
    CP = 28
    NUMBER = 29
    BOOLEAN = 30
    STRING = 31
    NAME = 32
    WHITESPACE = 33
    COMMENT = 34

    def __init__(self, input: TokenStream, output: TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None

    class KotlispContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def fun(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(KotlispParser.FunContext)
            else:
                return self.getTypedRuleContext(KotlispParser.FunContext, i)

        def getRuleIndex(self):
            return KotlispParser.RULE_kotlisp

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterKotlisp"):
                listener.enterKotlisp(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitKotlisp"):
                listener.exitKotlisp(self)

    def kotlisp(self):
        localctx = KotlispParser.KotlispContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_kotlisp)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 27
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la == 27:
                self.state = 24
                self.fun()
                self.state = 29
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FunContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def OP(self):
            return self.getToken(KotlispParser.OP, 0)

        def NAME(self):
            return self.getToken(KotlispParser.NAME, 0)

        def s_expression(self):
            return self.getTypedRuleContext(KotlispParser.S_expressionContext, 0)

        def CP(self):
            return self.getToken(KotlispParser.CP, 0)

        def getRuleIndex(self):
            return KotlispParser.RULE_fun

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterFun"):
                listener.enterFun(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitFun"):
                listener.exitFun(self)

    def fun(self):
        localctx = KotlispParser.FunContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_fun)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 30
            self.match(KotlispParser.OP)
            self.state = 31
            self.match(KotlispParser.T__0)
            self.state = 32
            self.match(KotlispParser.NAME)
            self.state = 33
            self.s_expression()
            self.state = 34
            self.match(KotlispParser.CP)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class S_expressionContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def OP(self):
            return self.getToken(KotlispParser.OP, 0)

        def CP(self):
            return self.getToken(KotlispParser.CP, 0)

        def variable(self):
            return self.getTypedRuleContext(KotlispParser.VariableContext, 0)

        def loop(self):
            return self.getTypedRuleContext(KotlispParser.LoopContext, 0)

        def conditional(self):
            return self.getTypedRuleContext(KotlispParser.ConditionalContext, 0)

        def fun_call(self):
            return self.getTypedRuleContext(KotlispParser.Fun_callContext, 0)

        def print_(self):
            return self.getTypedRuleContext(KotlispParser.Print_Context, 0)

        def math_expression(self):
            return self.getTypedRuleContext(KotlispParser.Math_expressionContext, 0)

        def read_line(self):
            return self.getTypedRuleContext(KotlispParser.Read_lineContext, 0)

        def s_expression(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(KotlispParser.S_expressionContext)
            else:
                return self.getTypedRuleContext(KotlispParser.S_expressionContext, i)

        def getRuleIndex(self):
            return KotlispParser.RULE_s_expression

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterS_expression"):
                listener.enterS_expression(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitS_expression"):
                listener.exitS_expression(self)

    def s_expression(self):
        localctx = KotlispParser.S_expressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_s_expression)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 36
            self.match(KotlispParser.OP)
            self.state = 44
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input, 1, self._ctx)
            if la_ == 1:
                self.state = 37
                self.variable()

            elif la_ == 2:
                self.state = 38
                self.loop()

            elif la_ == 3:
                self.state = 39
                self.conditional()

            elif la_ == 4:
                self.state = 40
                self.fun_call()

            elif la_ == 5:
                self.state = 41
                self.print_()

            elif la_ == 6:
                self.state = 42
                self.math_expression()

            elif la_ == 7:
                self.state = 43
                self.read_line()

            self.state = 49
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la == 27:
                self.state = 46
                self.s_expression()
                self.state = 51
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 52
            self.match(KotlispParser.CP)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Math_expressionContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self):
            return self.getToken(KotlispParser.STRING, 0)

        def list_(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(KotlispParser.List_Context)
            else:
                return self.getTypedRuleContext(KotlispParser.List_Context, i)

        def NUMBER(self, i: int = None):
            if i is None:
                return self.getTokens(KotlispParser.NUMBER)
            else:
                return self.getToken(KotlispParser.NUMBER, i)

        def NAME(self, i: int = None):
            if i is None:
                return self.getTokens(KotlispParser.NAME)
            else:
                return self.getToken(KotlispParser.NAME, i)

        def BOOLEAN(self, i: int = None):
            if i is None:
                return self.getTokens(KotlispParser.BOOLEAN)
            else:
                return self.getToken(KotlispParser.BOOLEAN, i)

        def index(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(KotlispParser.IndexContext)
            else:
                return self.getTypedRuleContext(KotlispParser.IndexContext, i)

        def PLUS(self):
            return self.getToken(KotlispParser.PLUS, 0)

        def MINUS(self):
            return self.getToken(KotlispParser.MINUS, 0)

        def MULT(self):
            return self.getToken(KotlispParser.MULT, 0)

        def DIV(self):
            return self.getToken(KotlispParser.DIV, 0)

        def XOR(self):
            return self.getToken(KotlispParser.XOR, 0)

        def AND(self):
            return self.getToken(KotlispParser.AND, 0)

        def OR(self):
            return self.getToken(KotlispParser.OR, 0)

        def EQUALS(self):
            return self.getToken(KotlispParser.EQUALS, 0)

        def NOT_EQUALS(self):
            return self.getToken(KotlispParser.NOT_EQUALS, 0)

        def GREATER(self):
            return self.getToken(KotlispParser.GREATER, 0)

        def GREATER_OR_EQUALS(self):
            return self.getToken(KotlispParser.GREATER_OR_EQUALS, 0)

        def LESS(self):
            return self.getToken(KotlispParser.LESS, 0)

        def LESS_OR_EQUALS(self):
            return self.getToken(KotlispParser.LESS_OR_EQUALS, 0)

        def MOD(self):
            return self.getToken(KotlispParser.MOD, 0)

        def getRuleIndex(self):
            return KotlispParser.RULE_math_expression

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterMath_expression"):
                listener.enterMath_expression(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitMath_expression"):
                listener.exitMath_expression(self)

    def math_expression(self):
        localctx = KotlispParser.Math_expressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_math_expression)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 72
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [2, 29, 30, 31, 32]:
                self.state = 60
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input, 3, self._ctx)
                if la_ == 1:
                    self.state = 54
                    self.match(KotlispParser.STRING)
                    pass

                elif la_ == 2:
                    self.state = 55
                    self.list_()
                    pass

                elif la_ == 3:
                    self.state = 56
                    self.match(KotlispParser.NUMBER)
                    pass

                elif la_ == 4:
                    self.state = 57
                    self.match(KotlispParser.NAME)
                    pass

                elif la_ == 5:
                    self.state = 58
                    self.match(KotlispParser.BOOLEAN)
                    pass

                elif la_ == 6:
                    self.state = 59
                    self.index()
                    pass

                pass
            elif token in [13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26]:
                self.state = 62
                _la = self._input.LA(1)
                if not (((_la) & ~0x3F) == 0 and ((1 << _la) & 134209536) != 0):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 68
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 68
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input, 4, self._ctx)
                    if la_ == 1:
                        self.state = 63
                        self.list_()
                        pass

                    elif la_ == 2:
                        self.state = 64
                        self.match(KotlispParser.NUMBER)
                        pass

                    elif la_ == 3:
                        self.state = 65
                        self.match(KotlispParser.NAME)
                        pass

                    elif la_ == 4:
                        self.state = 66
                        self.match(KotlispParser.BOOLEAN)
                        pass

                    elif la_ == 5:
                        self.state = 67
                        self.index()
                        pass

                    self.state = 70
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not (((_la) & ~0x3F) == 0 and ((1 << _la) & 5905580036) != 0):
                        break

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class List_Context(ParserRuleContext):
        __slots__ = "parser"

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def OP(self):
            return self.getToken(KotlispParser.OP, 0)

        def CP(self):
            return self.getToken(KotlispParser.CP, 0)

        def NUMBER(self, i: int = None):
            if i is None:
                return self.getTokens(KotlispParser.NUMBER)
            else:
                return self.getToken(KotlispParser.NUMBER, i)

        def STRING(self, i: int = None):
            if i is None:
                return self.getTokens(KotlispParser.STRING)
            else:
                return self.getToken(KotlispParser.STRING, i)

        def BOOLEAN(self, i: int = None):
            if i is None:
                return self.getTokens(KotlispParser.BOOLEAN)
            else:
                return self.getToken(KotlispParser.BOOLEAN, i)

        def getRuleIndex(self):
            return KotlispParser.RULE_list_

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterList_"):
                listener.enterList_(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitList_"):
                listener.exitList_(self)

    def list_(self):
        localctx = KotlispParser.List_Context(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_list_)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 74
            self.match(KotlispParser.T__1)
            self.state = 75
            self.match(KotlispParser.OP)
            self.state = 91
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [29]:
                self.state = 77
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 76
                    self.match(KotlispParser.NUMBER)
                    self.state = 79
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not (_la == 29):
                        break

                pass
            elif token in [31]:
                self.state = 82
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 81
                    self.match(KotlispParser.STRING)
                    self.state = 84
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not (_la == 31):
                        break

                pass
            elif token in [30]:
                self.state = 87
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 86
                    self.match(KotlispParser.BOOLEAN)
                    self.state = 89
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not (_la == 30):
                        break

                pass
            else:
                raise NoViableAltException(self)

            self.state = 93
            self.match(KotlispParser.CP)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Fun_callContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NAME(self):
            return self.getToken(KotlispParser.NAME, 0)

        def OP(self):
            return self.getToken(KotlispParser.OP, 0)

        def CP(self):
            return self.getToken(KotlispParser.CP, 0)

        def getRuleIndex(self):
            return KotlispParser.RULE_fun_call

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterFun_call"):
                listener.enterFun_call(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitFun_call"):
                listener.exitFun_call(self)

    def fun_call(self):
        localctx = KotlispParser.Fun_callContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_fun_call)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 95
            self.match(KotlispParser.NAME)
            self.state = 96
            self.match(KotlispParser.OP)
            self.state = 97
            self.match(KotlispParser.CP)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class VariableContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NAME(self):
            return self.getToken(KotlispParser.NAME, 0)

        def s_expression(self):
            return self.getTypedRuleContext(KotlispParser.S_expressionContext, 0)

        def getRuleIndex(self):
            return KotlispParser.RULE_variable

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterVariable"):
                listener.enterVariable(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitVariable"):
                listener.exitVariable(self)

    def variable(self):
        localctx = KotlispParser.VariableContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_variable)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 99
            self.match(KotlispParser.T__2)
            self.state = 100
            self.match(KotlispParser.NAME)
            self.state = 101
            self.s_expression()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class LoopContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def OP(self):
            return self.getToken(KotlispParser.OP, 0)

        def NAME(self, i: int = None):
            if i is None:
                return self.getTokens(KotlispParser.NAME)
            else:
                return self.getToken(KotlispParser.NAME, i)

        def CP(self):
            return self.getToken(KotlispParser.CP, 0)

        def s_expression(self):
            return self.getTypedRuleContext(KotlispParser.S_expressionContext, 0)

        def NUMBER(self):
            return self.getToken(KotlispParser.NUMBER, 0)

        def getRuleIndex(self):
            return KotlispParser.RULE_loop

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterLoop"):
                listener.enterLoop(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitLoop"):
                listener.exitLoop(self)

    def loop(self):
        localctx = KotlispParser.LoopContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_loop)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 103
            self.match(KotlispParser.T__3)
            self.state = 104
            self.match(KotlispParser.OP)
            self.state = 105
            self.match(KotlispParser.NAME)
            self.state = 106
            _la = self._input.LA(1)
            if not (_la == 29 or _la == 32):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 107
            self.match(KotlispParser.CP)
            self.state = 108
            self.s_expression()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ConditionalContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def s_expression(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(KotlispParser.S_expressionContext)
            else:
                return self.getTypedRuleContext(KotlispParser.S_expressionContext, i)

        def getRuleIndex(self):
            return KotlispParser.RULE_conditional

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterConditional"):
                listener.enterConditional(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitConditional"):
                listener.exitConditional(self)

    def conditional(self):
        localctx = KotlispParser.ConditionalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_conditional)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 110
            self.match(KotlispParser.T__4)
            self.state = 111
            self.s_expression()
            self.state = 112
            self.s_expression()
            self.state = 113
            self.s_expression()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class IndexContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NAME(self, i: int = None):
            if i is None:
                return self.getTokens(KotlispParser.NAME)
            else:
                return self.getToken(KotlispParser.NAME, i)

        def NUMBER(self):
            return self.getToken(KotlispParser.NUMBER, 0)

        def getRuleIndex(self):
            return KotlispParser.RULE_index

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterIndex"):
                listener.enterIndex(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitIndex"):
                listener.exitIndex(self)

    def index(self):
        localctx = KotlispParser.IndexContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_index)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 115
            self.match(KotlispParser.NAME)
            self.state = 116
            self.match(KotlispParser.T__5)
            self.state = 117
            _la = self._input.LA(1)
            if not (_la == 29 or _la == 32):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 118
            self.match(KotlispParser.T__6)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Print_Context(ParserRuleContext):
        __slots__ = "parser"

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def s_expression(self):
            return self.getTypedRuleContext(KotlispParser.S_expressionContext, 0)

        def getRuleIndex(self):
            return KotlispParser.RULE_print_

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterPrint_"):
                listener.enterPrint_(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitPrint_"):
                listener.exitPrint_(self)

    def print_(self):
        localctx = KotlispParser.Print_Context(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_print_)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 120
            self.match(KotlispParser.T__7)
            self.state = 121
            self.s_expression()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Read_lineContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def OP(self):
            return self.getToken(KotlispParser.OP, 0)

        def CP(self):
            return self.getToken(KotlispParser.CP, 0)

        def getRuleIndex(self):
            return KotlispParser.RULE_read_line

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterRead_line"):
                listener.enterRead_line(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitRead_line"):
                listener.exitRead_line(self)

    def read_line(self):
        localctx = KotlispParser.Read_lineContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_read_line)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 123
            self.match(KotlispParser.T__8)
            self.state = 124
            self.match(KotlispParser.OP)
            self.state = 125
            _la = self._input.LA(1)
            if not (((_la) & ~0x3F) == 0 and ((1 << _la) & 7168) != 0):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 126
            self.match(KotlispParser.CP)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx
